# bcgAgent

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  readme_local.md  tailwind.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: AGENTS.md  manual-smoke.md
src/: App.tsx  main.tsx  state.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: kb_e2e.rs  test-server.rs
src-tauri/icons/: icon.icns
src-tauri/scripts/: ci-rename-bundle.sh  inject-plist.sh
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  paths.rs  secrets.rs  test_server.rs
src-tauri/src/audio/: mod.rs  native_capture.rs  streaming.rs  tts.rs  whisper.rs
src-tauri/src/audio/tts/: elevenlabs.rs  mod.rs  pcm_sink.rs  say.rs
src-tauri/src/commands/: ask.rs  audio.rs  chunker.rs  games.rs  import_external.rs  ingest.rs  mod.rs  pages.rs  research.rs  search.rs  settings.rs  walkthrough.rs  walkthrough_session.rs
src-tauri/src/cover/: auto.rs  bgg.rs  mod.rs
src-tauri/src/embed/: bge_m3.rs  mod.rs
src-tauri/src/extractors/: components.rs  faq.rs  mod.rs  setup.rs
src-tauri/src/llm/: minimax.rs  mod.rs  prompts.rs  rag.rs  translate.rs
src-tauri/src/ocr/: mod.rs  prompt.rs  qwen.rs
src-tauri/src/research/: bgg_extra.rs  mod.rs  orchestrator.rs  pipeline.rs
src-tauri/src/research/connectors/: bgg_forum.rs  mod.rs  url_fetch.rs  web_search.rs
src-tauri/src/store/: chunks.rs  components.rs  db.rs  external_refs.rs  faq_pairs.rs  games.rs  illustrations.rs  jieba.rs  migrations_wave1.rs  mod.rs  models.rs  pages.rs  qa.rs  research.rs  settings.rs  setup_steps.rs  walkthrough_sessions.rs  walkthroughs.rs
src-tauri/src/store/migrations/: 0001_init.sql
src-tauri/tests/: e2e_pipeline.rs  tauri_ipc_args.rs  voice_roundtrip.rs
(+58 files in other folders)
